Working version, accepts number and shows info about the number

--- a/phoneinfo/info/templates/info/index.html
+++ b/phoneinfo/info/templates/info/index.html
@@ -5,8 +5,8 @@
 <em> This is the number you are requesting info on </em>
 <h3>{{ value }} </h3>
 
-<em> This is the number of times it was found in the database</em>
-<h3> {{ count }} </h3>
+<em> Is this a valid number? </em>
+<h3> {{ is_number_valid }} </h3>
 </body>
 
 </html>
