Changed the way results were passed back to index.html

--- a/phoneinfo/info/templates/info/index.html
+++ b/phoneinfo/info/templates/info/index.html
@@ -3,10 +3,10 @@
 <body>
 
 <em> This is the number you are requesting info on </em>
-<h3>{{ value }} </h3>
+<h3>{{ result.number }} </h3>
 
 <em> Is this a valid number? </em>
-<h3> {{ is_number_valid }} </h3>
+<h3> {{ result.is_number_valid }} </h3>
 </body>
 
 </html>
