Converted all end points to provide json data and not html data

--- a/phoneinfo/info/templates/info/index.html
+++ b/phoneinfo/info/templates/info/index.html
@@ -1,12 +1,3 @@
-<html>
+{{ result.number }}
+{{ result.is_number_valid }}
 
-<body>
-
-<em> This is the number you are requesting info on </em>
-<h3>{{ result.number }} </h3>
-
-<em> Is this a valid number? </em>
-<h3> {{ result.is_number_valid }} </h3>
-</body>
-
-</html>
